--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "description": "I want to try make an easy to use i18n components for react, using tagged template literals.",
   "main": "index.js",
   "dependencies": {
-    "@types/jest": "23.3.12",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-scripts": "2.1.3",
@@ -41,5 +37,13 @@
   "bugs": {
     "url": "https://github.com/Thorocaine/i18n-components/issues"
   },
-  "homepage": "https://github.com/Thorocaine/i18n-components#readme"
+  "homepage": "https://github.com/Thorocaine/i18n-components#readme",
+  "devDependencies": {
+    "@types/jest": "23.3.12",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.18",
+    "@types/react-dom": "16.0.11",
+    "@types/react-test-renderer": "^16.0.3",
+    "react-test-renderer": "^16.8.0-alpha.0"
+  }
 }
