--- a/package.json
+++ b/package.json
@@ -39,11 +39,15 @@
   },
   "homepage": "https://github.com/Thorocaine/i18n-components#readme",
   "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "23.3.12",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "react-test-renderer": "^16.8.0-alpha.0"
   }
 }
