--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "i18n-components",
-  "version": "1.0.0-beta.0",
-  "description": "I want to try make an easy to use i18n components for react, using tagged template literals.",
-  "main": "index.js",
-  "dependencies": {
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
-    "react-scripts": "2.1.3",
-    "typescript": "3.2.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Thorocaine/i18n-components.git"
-  },
-  "keywords": [
-    "i18n",
-    "react"
-  ],
-  "author": "Jonathan Peel",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Thorocaine/i18n-components/issues"
-  },
-  "homepage": "https://github.com/Thorocaine/i18n-components#readme",
-  "devDependencies": {
-    "@types/enzyme": "^3.1.15",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "23.3.12",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
-    "@types/react-test-renderer": "^16.0.3",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "react-test-renderer": "^16.8.0-alpha.0"
-  }
+	"name": "i18n-components",
+	"version": "1.0.0",
+	"description": "I want to try make an easy to use i18n components for react, using tagged template literals.",
+	"main": "index.js",
+	"devDependencies": {
+		"@storybook/react": "^5.3.14",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.4.1",
+		"@testing-library/user-event": "^7.2.1",
+		"react-scripts": "^3.4.0",
+		"typescript": "^3.8.2"
+	},
+	"peerDependencies": {
+		"react": "^16.10"
+	},
+	"scripts": {
+		"storybook": "start-storybook",
+		"build": "",
+		"test": "react-scripts test"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Thorocaine/i18n-components.git"
+	},
+	"keywords": [
+		"i18n",
+		"react"
+	],
+	"author": "Jonathan Peel",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/Thorocaine/i18n-components/issues"
+	},
+	"homepage": "https://github.com/Thorocaine/i18n-components#readme"
 }
