--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"test": "react-scripts test"
 	},
 	"eslintConfig": {
-		"extends": "react-app"
+		"extends": "react-app", "rules": {
+			"brace-style": [2, "allman", { "allowSingleLine": true }]
+		}
 	},
 	"browserslist": {
 		"production": [
