--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,14 @@
         "$tsc-watch"
       ],
       "isBackground": true
+    },
+    {
+      "type": "npm",
+      "script": "build",
+      "problemMatcher": [
+        "$tsc"
+      ],
+      "group": "build"
     }
   ]
 }
