--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
 		"esModuleInterop": true,
 		"lib": ["ES2016", "DOM"],
 		"jsx": "react",
-		"sourceMap": true,
 		"outDir": "dist",
-		"skipLibCheck": true,
+		"strict": true,
+		"target": "ES5",
   },
   "include": [
     "src/index.ts"
-  ]
+	],
+	"exclude": ["node_modules", "**/__tests__/*"]
 }
