--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.4.1",
 		"@testing-library/user-event": "^7.2.1",
+		"eslint": "^6.8.0",
+		"prettier": "^1.19.1",
 		"react-scripts": "^3.4.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^3.8.2"
@@ -19,7 +21,15 @@
 	"scripts": {
 		"storybook": "start-storybook",
 		"build": "rimraf dist && tsc",
-		"test": "react-scripts test"
+		"test": "",
+		"lint": "eslint src/**/*",
+		"format": "npm run lint -- --fix",
+		"---": "---",
+		"prepare" : "npm run build",
+		"prepublishOnly" : "npm test && npm run lint",
+		"preversion" : "npm run lint",
+		"version" : "npm run format && git add -A src",
+		"postversion" : "git push && git push --tags"
 	},
 	"eslintConfig": {
 		"extends": "react-app",
@@ -66,5 +76,7 @@
 		"url": "https://github.com/Thorocaine/i18n-components/issues"
 	},
 	"homepage": "https://github.com/Thorocaine/i18n-components#readme",
-	"files": ["dist"]
+	"files": [
+		"dist"
+	]
 }
